Shadow breaks with linked duplicate #128085
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#128085
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system:windows11
Graphics card:RTX 3090
Blender Version
Broken: Blender 4.2 EEVEE raytrace and no raytrace
Worked: 4.1 and older
Short description of error
Exact steps for others to reproduce the error
Imported mesh with linked duplicate mirrored has broken shadow (pic2) Problem does not occur with standard duplicate. Zooming in viewport or animation reveals this problem. The blend file included has the linked duplicate mirrored on the X plane.
Can not reproduce this issue, nor I see any duplicate. @PratikPB2123 Can you check?
I am able to actually reproduce this in 4.2 and 4.3, but if I zoom in/out a few times past the position where the artifact is visible, then it's no longer there even when I return to the same position again 🤔
I can sort of reliably reproduce the shadow artifact, here's what I did: (4.2 and 4.3)
I moved the already duplicated door on the right side towards top left outside the viewport region, and this shadow artifact suddenly appeared:
When I zoomed out to about here, it seems to be ok
Then when I zoomed in again, it won't show up. Even if you move the door again.
Edit: Sorry, I was writing this message while Yiming was writing theres.
I can confirm the issue here in 4.2 and 4.3, but either had to adjust the position of the camera or the shadow pool size to reproduce the issue
System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 560.94
Blender version: 4.2.2 LTS, branch: blender-v4.2-release, commit date: 2024-09-23 12:18, hash:
c03d7d98a413
Blender version: 4.3.0 Alpha, branch: main (modified), commit date: 2024-09-23 21:29, hash:
ccb186592537
Confirmed as well in 4.2/4.3. Can we raise the priority if legacy EEVEE is working?
Unfortunately, adjusting shadow pool makes no difference
Sorry @iss , wasn't home to verify the report yesterday 😅
I think we can raise priority yes.
Here's a simplified repro file:
https://projects.blender.org/attachments/dd18668e-65c5-45a4-a1a8-c4d1a43bb7c2
(If it doesn't repo move one of the cubes)
The issue seems to be caused by having objects with the same mesh data but different scale signs (ie. (1,1,1) and (-1,1,1)).
The objects will randomly render in one clipmap but not the other, but I can't figure out the cause.
My only guess is multiview and front/back groups somehow messing with each other when generating the draw commands.
I did a test for generating separate
DrawGroup
s for regular/inverted objects and that indeed seems to solve the issue:008430545c
However, I still don't see the issue with the current code. And it's unlikely to be a driver issue since I can repro on Nvidia and AMD.
@fclem Any idea?
Edit: Ah, just saw you assigned this issue to yourself. I should have refreshed the page. 🤦♂️